# iggy

./: .gitignore  DML_Notes_Navigation.txt  DML_Notes_Navigation.txt~  IGVC Roadmap.txt  IGVC_Roadmap.txt  IGVC_Work_Log.txt  LaunchExamined.txt  NOTES.txt  NOTES.txt~  OOP_CPP_Template.cpp  PackingList_and_Repairs.txt  README.md  Untitled Document~  aerialMapURL.txt  donoterase.txt  fileList.txt  frames.gv  frames_justBags.gv  handballfieldv1.csv  igvc_notes.txt  igvc_notes.txt~  igvc_notesmerge.txt  irlTopic.txt  irlTopics.txt  novatelLog.txt  rosgraphIRL.dot  rosgraphSimLarkin.dot  rostopiclistIRL.txt  rostopiclistSim02Mar.txt  testResults.csv  testResults3.csv  waypoints.txt
gazebo_iggy_vision/: CMakeLists.txt  package.xml
gazebo_iggy_vision/src/: gazebo_iggy_vision.cpp  whiteline_filter.cpp
iggy_control/: CMakeLists.txt  package.xml
iggy_control/config/: control.yaml  dual_ekf_navsat_example.yaml  dual_ekf_navsat_iggy.yaml  indoor_ekf_navsat_example.yaml  move_base_params.yaml  navsat_transform_template.yaml  robot_localization.yaml  single_ekf_navsat_iggy.yaml  teleopIRL.yaml  test_dual_ekf_navsat_iggy.yaml  test_navsat_example.yaml  test_single_ekf_iggy.yaml  test_single_ekf_iggy.yaml~
iggy_control/launch/: control.launch  dual_ekf_navsat_example.launch  dual_ekf_navsat_iggy.launch  indoor_control.launch  indoor_ekf_navsat_example.launch  jackl_move_base.launch  localization_test_ekf_navsat_iggy.launch  move_base.launch  single_ekf_navsat_iggy.launch  teleop.launch  teleopIRL.launch  test_odom_from_cmd.launch
iggy_control/src/: iggyface.py  odom_from_cmdvel.py
iggy_description/: CMakeLists.txt  notes.txt  package.xml
iggy_description/launch/: description.launch  xacrotest.launch
iggy_description/meshes/: ZED.stl  camera-beam.stl  camera-bracket.stl  iggy-base.stl  iggy-fenders.stl  iggy-wheel.stl  sick-lms1xx-bracket.stl
iggy_description/scripts/: env_run
iggy_description/urdf/: accessories.urdf.xacro  custom_example.urdf  deleteme.urdf  depth_camera.urdf  depth_camera.urdf.xacro  empty.urdf  iggy.gazebo  iggy.urdf.xacro  iggy2.urdf  iggy2.urdf.xacro  iggy3.urdf.xacro  inertia.xacro  rear_wheels.xacro  zed_camera.urdf.xacro
iggy_gazebo/: CMakeLists.txt  InertiaCalulator.ods  install_models.sh  package.xml
iggy_gazebo/igvc_construction_barrel/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
iggy_gazebo/launch/: course_world.launch  iggy2_world.launch  iggy_gazebo.rviz  iggy_vision.rviz  iggy_world.launch  iggy_world2.launch
iggy_gazebo/worlds/: igvc_basic.world  igvc_basic_USMA.world
igvc_image/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
igvc_image/docs/: LineFilterConfig-usage.dox  LineFilterConfig.dox  LineFilterConfig.wikidoc
igvc_image/image_to_pointcloud/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  nodelet_plugins.xml
igvc_image/image_transform/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml
igvc_image/line_filter/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  nodelet_plugins.xml
igvc_run/: CMakeLists.txt  package.xml
igvc_run/include/: blankDoc.txt
igvc_run/launch/: .dml_run_everything.launch.swp  bagdemo_localization.launch  bagdemo_localization.rviz  bagdemo_tsp.launch  bagfiles_run.launch  bags.launch  basic_odom.launch  basic_odom.launch~.html  broadcast_demo.launch  demoReal_localization.launch  demoReal_localization2.launch  dml_bagdemo_localization.launch  dml_ekf.launch  dml_imu.launch  dml_move_base.launch  dml_run_everything .launch  dml_run_everything.launch  dml_run_everything.launch.orig  dml_test_run.launch  dml_testvision_run.launch  dml_vision_run.launch  dual_ekf_navsat_example.launch  ekf .launch  ekf_navsat.launch  ekf_test.launch  ekf_transform.launch  ekf_transform_odoms.launch  igvc_localization_test.launch  igvc_rawdata.launch  igvc_run.launch  igvc_run_everything.launch  igvc_run_everything.launch.bak  igvc_run_everything.launch~  igvc_run_everything.launch~.html  igvc_run_everything.rviz  igvc_run_everything.rviz.orig  igvc_run_irl.launch  igvc_stereo.launch  igvc_test.launch  lidar_troubleshoot_bags.launch  (+17 more)
igvc_run/params/: dual_ekf_navsat_example.yaml  ekf_navsat.yaml
igvc_run/src/: LatLongUTMconversion.py  disparity.pgm  dml_rosbagRecord.sh  edge.pgm  goal_pub_IGVC.py  goal_pub_IGVC.py.orig  goal_pub_IGVC.py~  goal_pub_IGVCZR.py  goal_pub_NavMsg.py  goal_pub_NavMsg.py~  gps_2local.py  hacked_odom.py  headingFromGPS.py  headingFromMagnetic.py  imu_gps_Node_tf.py  imu_tf.py  larkin_goal_pub_IGVC.py  leftGreyImage.pgm  odom_ekf.py  odom_ekf2.py  rectified.pgm  rightGreyImage.pgm  rosbagRecord.sh  rosbagRecord.sh~  send_gps_goals.py  show_initLL.py  simple_nav_goals.cpp  testResults  testResults.csv  testResults2.csv  testResults3.csv  tests.txt  tests.txt~  waypoints.csv  waypoints.csv.old  waypoints.csv.orig  waypoints.csv~  waypoints2.csv  waypointsTest.csv  wheel_odom_tf_broadcaster.cpp
igvc_stereo/: CMakeLists.txt  README.md  package.xml
igvc_stereo/cfg/: color_filter.cfg
igvc_stereo/include/: color_filter.h
igvc_stereo/launch/: igvc-stereo.launch  igvc_stereo.launch
igvc_stereo/src/: color_filter.cpp  main.cpp
simple_navigation_goals/: CMakeLists.txt  Test_tsp_did  Test_tsp_did~  package.xml
simple_navigation_goals/launch/: 4Testing_direct_input_goal.launch  simple_navigation_goals.launch
simple_navigation_goals/src/: 4Testing_direct_input_goal.cpp  simple_nav_goals.cpp  simple_nav_goalsOriginal.cpp
structured_segmentation/: CMakeLists.txt  CMakeLists.txt~  nodelets.xml  nodelets.xml~  package.xml  package.xml~
structured_segmentation/cfg/: GroundSegmenter.cfg  GroundSegmenter.cfgc  GroundSegmenter.cfg~
structured_segmentation/docs/: GroundSegmenterConfig-usage.dox  GroundSegmenterConfig.dox  GroundSegmenterConfig.wikidoc
structured_segmentation/src/: ground_segmenter(CDT Jorge Figueroa-Cecco 4 MAR 2015)WORKS.cpp  ground_segmenter.cpp  (+3 more)
triclops_vision/: CMakeLists.txt  CMakeLists.txt.user.1.3  CMakeLists.txt.user.orig  notes.txt  package.xml  triVision.files  triVision.includes  triclops_vision
(+464 files in other folders)
