<?xml version="1.0"?>
<package>
  <name>iggy_description</name>
  <version>0.0.0</version>
  <description>URDF robot description for Iggy</description>

  <maintainer email="user1@westpointrobotics.com">Dominic Larkin</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/westpoint-robotics</url> 
   <author email="user1@westpointrobotics.com">Dominic Larkin</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>pointgrey_camera_description</run_depend>

  <export>
  </export>
</package>
