<?xml version="1.0"?>
<package>
  <name>iggy_gazebo</name>
  <version>0.0.0</version>
  <description>The iggy_gazebo package</description>

  <maintainer email="user1@westpointrobotics.com">Dominic Larkin</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/westpoint-robotics</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>iggy_control</run_depend>
  <run_depend>iggy_description</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
